--- a/src/app/cursos/components/form/form.component.html
+++ b/src/app/cursos/components/form/form.component.html
@@ -1,17 +1,24 @@
+<!-- Encabezado del Diálogo -->
 <div mat-dialog-title>
   <mat-toolbar fxLayout fxLayoutAlign="space-between center">
     <h3>{{ title }}</h3>
+    <!-- Botón de cierre del diálogo -->
     <button mat-icon-button mat-dialog-close>
       <mat-icon>close</mat-icon>
     </button>
   </mat-toolbar>
 </div>
+<!-- Formulario principal -->
 <form [formGroup]="emp_form" (ngSubmit)="saveData()">
   <div mat-dialog-content class="content">
     <div class="row">
       <mat-form-field class="outline">
         <mat-label>Nombre del Curso</mat-label>
-        <textarea matInput placeholder="Nombre del curso" formControlName="nom_cur"></textarea>
+        <textarea
+          matInput
+          placeholder="Nombre del curso"
+          formControlName="nom_cur"
+        ></textarea>
         <mat-icon matSuffix>text_fields</mat-icon>
       </mat-form-field>
     </div>
@@ -19,16 +26,27 @@
     <div class="row">
       <mat-form-field class="outline">
         <mat-label>Fecha de Inicio</mat-label>
-        <input matInput type="text" (click)="fecha_inicio_cur.open()" [matDatepicker]="fecha_inicio_cur"
-          formControlName="fecha_inicio_cur" />
+        <input
+          matInput
+          type="text"
+          (click)="fecha_inicio_cur.open()"
+          [matDatepicker]="fecha_inicio_cur"
+          formControlName="fecha_inicio_cur"
+        />
         <mat-hint>dd-mm-yyyy</mat-hint>
         <mat-datepicker-toggle matIconSuffix [for]="fecha_inicio_cur">
           <mat-icon matDatepickerToggleIcon>event</mat-icon>
         </mat-datepicker-toggle>
-        <mat-datepicker #fecha_inicio_cur></mat-datepicker> </mat-form-field><mat-form-field class="outline">
+        <mat-datepicker #fecha_inicio_cur></mat-datepicker> </mat-form-field
+      ><mat-form-field class="outline">
         <mat-label>Fecha de Finalización</mat-label>
-        <input matInput type="text" (click)="fecha_fin_cur.open()" [matDatepicker]="fecha_fin_cur"
-          formControlName="fecha_fin_cur" />
+        <input
+          matInput
+          type="text"
+          (click)="fecha_fin_cur.open()"
+          [matDatepicker]="fecha_fin_cur"
+          formControlName="fecha_fin_cur"
+        />
         <mat-hint>dd-mm-yyyy</mat-hint>
         <mat-datepicker-toggle matIconSuffix [for]="fecha_fin_cur">
           <mat-icon matDatepickerToggleIcon>event</mat-icon>
@@ -40,35 +58,54 @@
     <div class="row">
       <mat-form-field class="outline">
         <mat-label>Duración del Curso</mat-label>
-        <textarea matInput placeholder="Duración del curso" formControlName="dur_cur"></textarea>
+        <textarea
+          matInput
+          placeholder="Duración del curso"
+          formControlName="dur_cur"
+        ></textarea>
         <mat-icon matSuffix>access_time</mat-icon>
       </mat-form-field>
     </div>
     <div class="row">
       <mat-form-field class="outline">
         <mat-label>Categoría del Curso</mat-label>
-        <mat-select formControlName="id_cate_cur" placeholder="Selecciona una categoría">
-          <mat-option *ngFor="let categoria of categorias" [value]="categoria.id_cate">
+        <mat-select
+          formControlName="id_cate_cur"
+          placeholder="Selecciona una categoría"
+        >
+          <mat-option
+            *ngFor="let categoria of categorias"
+            [value]="categoria.id_cate"
+          >
             {{ categoria.nom_cate }}
           </mat-option>
         </mat-select>
       </mat-form-field>
       <mat-form-field class="outline">
         <mat-label>Instructores</mat-label>
-        <mat-select multiple formControlName="ced_inst" placeholder="Selecciona instructores"
-          [compareWith]="compareInstructores">
-          <mat-option *ngFor="let instructor of instructores" [value]="instructor.ced_inst">
+        <mat-select
+          multiple
+          formControlName="ced_inst"
+          placeholder="Selecciona instructores"
+          [compareWith]="compareInstructores"
+        >
+          <mat-option
+            *ngFor="let instructor of instructores"
+            [value]="instructor.ced_inst"
+          >
             {{ instructor.nom_pat_inst + " " + instructor.ape_pat_inst }}
           </mat-option>
         </mat-select>
       </mat-form-field>
     </div>
     <div class="row">
-      <div class="outline" style=" width: 500px">
+      <div class="outline" style="width: 500px">
         <mat-label>Detalle del Certificado</mat-label>
-        <ejs-richtexteditor [(ngModel)]="certificadoContent" formControlName="det_cer"
-          [toolbarSettings]="toolbarSettings">
-
+        <ejs-richtexteditor
+          [(ngModel)]="certificadoContent"
+          formControlName="det_cer"
+          [toolbarSettings]="toolbarSettings"
+        >
         </ejs-richtexteditor>
       </div>
     </div>
@@ -77,13 +114,23 @@
       <input type="file" id="fileInput" (change)="capturarFile($event)" />
     </div>
     <div class="preview-container" *ngIf="previsualizacion">
-      <img [src]="previsualizacion" alt="" width="250px" height="250px" class="imgp" />
+      <img
+        [src]="previsualizacion"
+        alt=""
+        width="250px"
+        height="250px"
+        class="imgp"
+      />
     </div>
   </div>
+  <!-- Botones de Acción del Diálogo -->
   <div mat-dialog-actions class="action">
+    <!-- Botón para cerrar el diálogo sin guardar cambios -->
     <button mat-button color="primary" type="button" mat-dialog-close>
       Cancelar
     </button>
+    <!-- Botón para enviar el formulario y grabar los cambios -->
+
     <button mat-raised-button color="primary" type="submit">Grabar</button>
   </div>
 </form>
