--- a/src/app/shared/components/container/container.component.html
+++ b/src/app/shared/components/container/container.component.html
@@ -1,5 +1,8 @@
+<!-- Contenedor principal utilizando Angular Flex Layout con disposición horizontal centrada -->
 <div fxLayout fxLayoutAlign="center" class="container">
+  <!-- Tarjeta de Material con flexibilidad definida utilizando Angular Flex Layout -->
   <mat-card fxFlex="1 1 98%" class="mat-elevation-z3">
+    <!-- Contenido proyectado dentro de la tarjeta utilizando la etiqueta ng-content -->
     <ng-content></ng-content>
   </mat-card>
 </div>
