--- a/src/app/shared/components/modal-certificados/modal-certificados.component.html
+++ b/src/app/shared/components/modal-certificados/modal-certificados.component.html
@@ -1,11 +1,16 @@
+<!-- Contenedor principal con la clase "container" -->
 <div class="container">
+  <!-- Contenedor de información general con la clase "infoGen" -->
   <div class="infoGen">
+    <!-- Contenedor de la plantilla de certificado con la clase "certificadoPlant" -->
     <div class="certificadoPlant">
       <img src="../../../../assets/images/plantillaCertificado7.png" />
+      <!-- Contenedor de datos del certificado con la clase "datos" -->
       <div class="datos">
         <div class="participanteNom">
           <h2>Erick Granda</h2>
         </div>
+        <!-- Contenedor de información del certificado con la clase "certificadoInfo" -->
         <div class="certificadoInfo">
           <p>
             Por haber completado satisfactoriamente el diplomado de Publicidad y
@@ -13,14 +18,17 @@
             una duracion de 20 horas.
           </p>
         </div>
+        <!-- Contenedor de la fecha actual con la clase "fechaHoy" -->
         <div class="fechaHoy">
           <p>19/12/2023</p>
         </div>
+        <!-- Contenedor de la primera firma con la clase "firma1" -->
         <div class="firma1">
           <img
             src="https://upload.wikimedia.org/wikipedia/commons/7/71/Firma_Josep_Irla.png"
             alt="Firma"
           />
+
           <h3 class="nombreFirma1">Erik Granda</h3>
           <p class="cargo">Decano</p>
         </div>
@@ -30,6 +38,7 @@
             alt="Firma"
           />
           <h3 class="nombreFirma1">Erik Granda</h3>
+          <!-- Cargo de la persona que firma con la clase "cargo" -->
           <p class="cargo">Decano</p>
         </div>
       </div>
