--- a/src/app/shared/components/paginator/paginator.component.html
+++ b/src/app/shared/components/paginator/paginator.component.html
@@ -1,4 +1,6 @@
+<!-- Contenedor principal con disposición horizontal, alineación en el extremo derecho y centro vertical -->
 <div fxLayout fxLayoutAlign="end center" fxLayoutGap="10px">
+  <!-- Componente de paginación de Angular Material (mat-paginator) -->
   <mat-paginator
     [length]="length"
     [pageSize]="pageSize"
