--- a/src/app/certificados/componentes/form/form.component.html
+++ b/src/app/certificados/componentes/form/form.component.html
@@ -1,3 +1,4 @@
+<!-- Sección del Título del Diálogo -->
 <div mat-dialog-title>
   <mat-toolbar fxLayout fxLayoutAlign="space-between center">
     <h3><strong>Curso Seleccionado:</strong> {{ title }}</h3>
@@ -6,53 +7,87 @@
     </button>
   </mat-toolbar>
 </div>
+<!-- Formulario Principal -->
 <form (ngSubmit)="saveData()" class="form-container">
+  <!-- Contenedor de Botones -->
   <div class="button-container">
-    <input type="file"
+    <input
+      type="file"
       accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel"
-      (change)="csvImport($event)" style="display: none" #fileInput />
-    <a href="../../../../assets/archives/participantes.csv" download="participantes.csv">
+      (change)="csvImport($event)"
+      style="display: none"
+      #fileInput
+    />
+    <!-- Botón para descargar la plantilla CSV -->
+    <a
+      href="../../../../assets/archives/participantes.csv"
+      download="participantes.csv"
+    >
       <button mat-raised-button type="button" class="left-button">
         <mat-icon>cloud_download</mat-icon>Plantilla CSV
       </button>
     </a>
-
-    <button mat-raised-button type="button" class="center-button" (click)="fileInput.click()">
+    <!-- Botón para cargar un archivo CSV -->
+    <button
+      mat-raised-button
+      type="button"
+      class="center-button"
+      (click)="fileInput.click()"
+    >
       <mat-icon>cloud_upload</mat-icon> Cargar CSV
     </button>
-
-    <button mat-raised-button color="warn" type="button" class="right-button"
-      (click)="registerParticipantes(); generateCertificates()">
+    <!-- Botón para generar certificados -->
+    <button
+      mat-raised-button
+      color="warn"
+      type="button"
+      class="right-button"
+      (click)="registerParticipantes(); generateCertificates()"
+    >
       Generar Certificados
     </button>
   </div>
-
+  <!-- Contenedor del Contenido Modal -->
   <div class="modal-content-container">
-    <cer-table [data]="data" [metaDataColumns]="metaDataColumns">
-      <!-- <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Acciones</th>
-        <td mat-cell *matCellDef="let row" class="alignButton"></td>
-      </ng-container> -->
-    </cer-table>
-
+    <!-- Tabla de Datos (cer-table) -->
+    <cer-table [data]="data" [metaDataColumns]="metaDataColumns"> </cer-table>
+    <!-- Paginador (cer-paginator) -->
     <cer-paginator (onChangePage)="changePage($event)" [length]="totalRecords">
     </cer-paginator>
-
+    <!-- Sección de Certificados Generados -->
     <div id="certificates-section">
-      <div id="certificates-section-container" style="display: block;">
-        <div *ngFor="let row of data; let i = index" class="certificate-container">
+      <div id="certificates-section-container" style="display: block">
+        <!-- Iteración sobre los datos para mostrar certificados -->
+        <div
+          *ngFor="let row of data; let i = index"
+          class="certificate-container"
+        >
           <div class="certificate" id="certificate-container-{{ i }}">
-            <img [src]="detalleCursosInstructores.curso.url_cer" alt="Certificado" />
+            <!-- Contenido del Certificado -->
+            <img
+              [src]="detalleCursosInstructores.curso.url_cer"
+              alt="Certificado"
+            />
             <div class="participanteNom">
               <h2>{{ row.nom_pat_par }} {{ row.ape_pat_par }}</h2>
             </div>
-            <div *ngIf="certificadoContent" class="certificadoInfo" [innerHTML]="certificadoContent"></div>
-
+            <div
+              *ngIf="certificadoContent"
+              class="certificadoInfo"
+              [innerHTML]="certificadoContent"
+            ></div>
+            <!-- Información Adicional en el Certificado -->
             <div class="fechaHoy">
-              <p>{{fecha_actual}}</p>
+              <p>{{ fecha_actual }}</p>
             </div>
+            <!-- Firma de Instructores -->
             <div class="container_firmas">
-              <div class="block_firma" *ngFor="let instructor of detalleCursosInstructores.instructores">
+              <div
+                class="block_firma"
+                *ngFor="
+                  let instructor of detalleCursosInstructores.instructores
+                "
+              >
                 <img [src]="instructor.url_firma" alt="Firma" />
                 <h3 class="nombre_firma">
                   {{ instructor.nom_pat_inst }} {{ instructor.ape_pat_inst }}
@@ -61,7 +96,9 @@
               </div>
             </div>
             <div>
-              <p class="codigo">{{ detalleCursosInstructores.curso.id_cur }}{{row.ced_par}}</p>
+              <p class="codigo">
+                {{ detalleCursosInstructores.curso.id_cur }}{{ row.ced_par }}
+              </p>
             </div>
           </div>
         </div>
