--- a/src/app/certificados/pages/page-list/page-list.component.html
+++ b/src/app/certificados/pages/page-list/page-list.component.html
@@ -1,7 +1,10 @@
 <cer-title></cer-title>
 <cer-container>
+  <!-- Contenedor con barra de desplazamiento -->
   <ng-scrollbar class="heightMaxScrollBar">
+    <!-- Contenido del componente -->
     <div class="botones">
+      <!-- Selector de cursos -->
       <mat-form-field class="outline cursos">
         <mat-label>Cursos</mat-label>
         <mat-select
@@ -9,12 +12,13 @@
           placeholder="Seleccionar un curso"
           (selectionChange)="onCursoSelectionChange($event.value)"
         >
+          <!-- Opciones para cada curso -->
           <mat-option *ngFor="let curso of cursos" [value]="curso.id_cur">
             {{ curso.nom_cur }}
           </mat-option>
         </mat-select>
       </mat-form-field>
-
+      <!-- Botón para realizar alguna acción -->
       <button mat-flat-button class="custom-button" (click)="doAction()">
         <span>
           Participantes
@@ -22,11 +26,13 @@
         </span>
       </button>
     </div>
-
+    <!-- Tabla de datos -->
     <cer-table [data]="data" [metaDataColumns]="metaDataColumns">
+      <!-- Definición de columna para acciones -->
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let row" class="alignButton">
+          <!-- Botones de acción para cada fila -->
           <button
             mat-icon-button
             color="primary"
@@ -47,6 +53,7 @@
       </ng-container>
     </cer-table>
   </ng-scrollbar>
+  <!-- Paginador para la tabla -->
   <cer-paginator
     (onChangePage)="changePage($event)"
     [length]="totalRecords"
