--- a/src/app/cursos/pages/page-list/page-list.component.html
+++ b/src/app/cursos/pages/page-list/page-list.component.html
@@ -1,10 +1,16 @@
+<!-- Componente de título -->
 <cer-title></cer-title>
+<!-- Contenedor principal -->
 <cer-container>
+  <!-- Barra de desplazamiento personalizada -->
   <ng-scrollbar class="heightMaxScrollBar">
+    <!-- Componente de tabla con datos y metadatos de columnas -->
     <cer-table [data]="data" [metaDataColumns]="metaDataColumns">
+      <!-- Definición de columna para acciones en la tabla -->
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let row" class="alignButton">
+          <!-- Botón de edición con tooltip -->
           <button
             mat-icon-button
             color="primary"
@@ -13,6 +19,7 @@
           >
             <mat-icon>edit</mat-icon>
           </button>
+          <!-- Botón de eliminación con tooltip -->
           <button
             mat-icon-button
             color="accent"
@@ -25,8 +32,10 @@
       </ng-container>
     </cer-table>
   </ng-scrollbar>
+  <!-- Componente de paginación -->
   <cer-paginator (onChangePage)="changePage($event)" [length]="totalRecords">
   </cer-paginator>
 </cer-container>
+<!-- Componente de botones de teclado -->
 <cer-keypad-button [keypadButtons]="keypadButtons" (onClick)="doAction($event)">
 </cer-keypad-button>
