--- a/src/app/instructores/pages/page-list/page-list.component.html
+++ b/src/app/instructores/pages/page-list/page-list.component.html
@@ -1,7 +1,12 @@
+<!-- Componente personalizado para mostrar un título -->
 <cer-title></cer-title>
+<!-- Componente personalizado que actúa como contenedor -->
 <cer-container>
+  <!-- Componente personalizado de barra de desplazamiento con una clase de altura máxima -->
   <ng-scrollbar class="heightMaxScrollBar">
+    <!-- Componente personalizado de tabla que recibe datos y metadatos de columnas -->
     <cer-table [data]="data" [metaDataColumns]="metaDataColumns">
+      <!-- Definición de una columna adicional para acciones en la tabla -->
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let row" class="alignButton">
@@ -25,8 +30,10 @@
       </ng-container>
     </cer-table>
   </ng-scrollbar>
+  <!-- Componente personalizado de paginación que emite eventos al cambiar de página -->
   <cer-paginator (onChangePage)="changePage($event)" [length]="totalRecords">
   </cer-paginator>
 </cer-container>
+<!-- Componente personalizado de botones de teclado que recibe un arreglo de botones y emite eventos al hacer clic -->
 <cer-keypad-button [keypadButtons]="keypadButtons" (onClick)="doAction($event)">
 </cer-keypad-button>
