--- a/src/app/usuarios/components/form/form.component.html
+++ b/src/app/usuarios/components/form/form.component.html
@@ -1,17 +1,26 @@
+<!-- Encabezado del diálogo -->
 <div mat-dialog-title>
+  <!-- Barra de herramientas de Angular Material con disposición horizontal y espacio entre elementos -->
   <mat-toolbar fxLayout fxLayoutAlign="space-between center">
     <h3>{{ title }}</h3>
+    <!-- Botón de cierre del diálogo -->
     <button mat-icon-button mat-dialog-close>
       <mat-icon>close</mat-icon>
     </button>
   </mat-toolbar>
 </div>
+<!-- Formulario del diálogo -->
 <form [formGroup]="emp_form" (ngSubmit)="saveData()">
   <div mat-dialog-content class="content">
     <div class="row">
       <mat-form-field class="outline">
         <mat-label>Usuario</mat-label>
-        <input matInput type="text" placeholder="Nombre de usuario" formControlName="user_usu" />
+        <input
+          matInput
+          type="text"
+          placeholder="Nombre de usuario"
+          formControlName="user_usu"
+        />
         <mat-icon matSuffix>account_box</mat-icon>
       </mat-form-field>
     </div>
@@ -19,7 +28,12 @@
     <div class="row">
       <mat-form-field class="outline">
         <mat-label>Contraseña</mat-label>
-        <input matInput type="password" placeholder="Contraseña" formControlName="pass_usu" />
+        <input
+          matInput
+          type="password"
+          placeholder="Contraseña"
+          formControlName="pass_usu"
+        />
         <mat-icon matSuffix>lock</mat-icon>
       </mat-form-field>
     </div>
@@ -36,11 +50,19 @@
       </mat-form-field>
     </div>
   </div>
+  <!-- Acciones del diálogo -->
   <div mat-dialog-actions class="action">
+    <!-- Botón de cancelar el diálogo -->
     <button mat-button color="primary" type="button" mat-dialog-close>
       Cancelar
     </button>
-    <button mat-raised-button color="primary" type="submit" [disabled]="emp_form.invalid">
+    <!-- Botón de grabar el formulario, habilitado solo si el formulario es válido -->
+    <button
+      mat-raised-button
+      color="primary"
+      type="submit"
+      [disabled]="emp_form.invalid"
+    >
       Grabar
     </button>
   </div>
