--- a/src/app/usuarios/pages/page-list/page-list.component.html
+++ b/src/app/usuarios/pages/page-list/page-list.component.html
@@ -1,21 +1,40 @@
+<!-- Componente personalizado llamado 'cer-title' -->
 <cer-title></cer-title>
 <cer-container>
+  <!-- Componente personalizado 'ng-scrollbar' con clase CSS 'heightMaxScrollBar' -->
   <ng-scrollbar class="heightMaxScrollBar">
+    <!-- Componente personalizado 'cer-table' -->
     <cer-table [data]="data" [metaDataColumns]="metaDataColumns">
+      <!-- Definición de columna adicional llamada 'actions' -->
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let row" class="alignButton">
-          <button mat-icon-button color="primary" (click)="openForm(row)" matTooltip="EDITAR">
+          <!-- Botón de edición con ícono 'edit' -->
+          <button
+            mat-icon-button
+            color="primary"
+            (click)="openForm(row)"
+            matTooltip="EDITAR"
+          >
             <mat-icon>edit</mat-icon>
           </button>
-          <button mat-icon-button color="accent" (click)="delete(row.id_usu)" matTooltip="ELIMINAR">
+          <!-- Botón de eliminación con ícono 'delete' -->
+          <button
+            mat-icon-button
+            color="accent"
+            (click)="delete(row.id_usu)"
+            matTooltip="ELIMINAR"
+          >
             <mat-icon>delete</mat-icon>
           </button>
         </td>
       </ng-container>
     </cer-table>
   </ng-scrollbar>
-  <cer-paginator (onChangePage)="changePage($event)" [length]="totalRecords"> </cer-paginator>
+  <!-- Componente personalizado 'cer-paginator' -->
+  <cer-paginator (onChangePage)="changePage($event)" [length]="totalRecords">
+  </cer-paginator>
 </cer-container>
+<!-- Componente personalizado 'cer-keypad-button' -->
 <cer-keypad-button [keypadButtons]="keypadButtons" (onClick)="doAction($event)">
 </cer-keypad-button>
