--- a/src/app/certificados/pages/page-list/page-list.component.html
+++ b/src/app/certificados/pages/page-list/page-list.component.html
@@ -3,12 +3,9 @@
   <ng-scrollbar class="heightMaxScrollBar">
     <div class="botones">
       <mat-form-field class="outline cursos">
-        <mat-label>Cursos</mat-label>
-        <mat-select
-          formControlName="id_cate_cur"
-          placeholder="Seleccionar un curso"
-          (selectionChange)="onCursoSelectionChange($event.value)"
-        >
+        <mat-label>Evento académico</mat-label>
+        <mat-select formControlName="id_cate_cur" placeholder="Seleccionar un evento académico"
+          (selectionChange)="onCursoSelectionChange($event.value)">
           <mat-option *ngFor="let curso of cursos" [value]="curso.id_cur">
             {{ curso.nom_cur }}
           </mat-option>
@@ -27,28 +24,16 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let row" class="alignButton">
-          <button
-            mat-icon-button
-            color="primary"
-            matTooltip="VER CERTIFICADO"
-            (click)="openCertificate(row.url_gen_cer)"
-          >
+          <button mat-icon-button color="primary" matTooltip="VER CERTIFICADO"
+            (click)="openCertificate(row.url_gen_cer)">
             <mat-icon color="sucess">preview</mat-icon>
           </button>
-          <button
-            mat-icon-button
-            color="accent"
-            (click)="delete(row.id_gen_cer)"
-            matTooltip="ELIMINAR"
-          >
+          <button mat-icon-button color="accent" (click)="delete(row.id_gen_cer)" matTooltip="ELIMINAR">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
       </ng-container>
     </cer-table>
   </ng-scrollbar>
-  <cer-paginator
-    (onChangePage)="changePage($event)"
-    [length]="totalRecords"
-  ></cer-paginator>
+  <cer-paginator (onChangePage)="changePage($event)" [length]="totalRecords"></cer-paginator>
 </cer-container>
