style: Cambia los colores del menu, header y en page-login
Cambia los logotipos en el login y header
Cambia los colores en el menú:
rgb(255, 28, 70)
#fee4e4

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,8 +3,8 @@ mat-sidenav-content {
 }
 
 mat-sidenav {
-  max-width: 280px;
-  background: #00636a;
+  max-width: 290px;
+  background: rgb(255, 28, 70);
   border: none;
 }
 
