--- a/src/app/core/pages/page-login/page-login.component.html
+++ b/src/app/core/pages/page-login/page-login.component.html
@@ -1,30 +1,14 @@
-<div
-  fxLayout
-  fxLayout.lt-sm="column"
-  class="container"
-  fxLayoutAlign="center center"
->
+<div fxLayout fxLayout.lt-sm="column" class="container" fxLayoutAlign="center center">
   <!-- Sección de Información -->
-  <div
-    class="informacion"
-    fxFlex.gt-sm="1 1 60%"
-    fxFlex.lt-sm="1 1 50%"
-    fxLayout="column"
-    fxLayoutAlign="center center"
-  >
+  <div class="informacion" fxFlex.gt-sm="1 1 60%" fxFlex.lt-sm="1 1 50%" fxLayout="column"
+    fxLayoutAlign="center center">
     <!-- Logo de la aplicación -->
-    <img src=" ../../../../assets/images/LOGO_DAS.png" alt="" class="logo" />
+    <img src=" ../../../../assets/images/loginUta.png" alt="" class="logo" />
     <!-- Título de la aplicación -->
     <h2>Sistema de generación de certificados</h2>
   </div>
   <!-- Sección de Inicio de Sesión -->
-  <div
-    class="login"
-    fxFlex.gt-sm="1 1 40%"
-    fxFlex.lt-sm="1 1 30%"
-    fxLayout
-    fxLayoutAlign="center center"
-  >
+  <div class="login" fxFlex.gt-sm="1 1 40%" fxFlex.lt-sm="1 1 30%" fxLayout fxLayoutAlign="center center">
     <!-- Componente cer-login que probablemente contiene el formulario de inicio de sesión -->
     <cer-login></cer-login>
   </div>
