--- a/src/app/cursos/components/form/form.component.html
+++ b/src/app/cursos/components/form/form.component.html
@@ -87,7 +87,8 @@
     <div class="row">
       <div class="outline">
         <mat-label>Estado</mat-label>
-        <mat-slide-toggle [checked]="estado_cur" color="primary" (change)="toggleChanges($event)"></mat-slide-toggle>
+        <mat-slide-toggle [checked]="estado_cur" color="accent" (change)="toggleChanges($event)"
+          style="padding: 10px;"></mat-slide-toggle>
       </div>
     </div>
   </div>
