fix: Arregla el cierre automatico y visualización de los certificados al guardar

--- a/src/app/certificados/componentes/form/form.component.html
+++ b/src/app/certificados/componentes/form/form.component.html
@@ -8,7 +8,7 @@
   </mat-toolbar>
 </div>
 <!-- Formulario Principal -->
-<form (ngSubmit)="saveData()" class="form-container">
+<form class="form-container">
   <!-- Contenedor de Botones -->
   <div class="button-container">
     <input type="file"
