feat: Construye el codigo de verificación para el certificado

--- a/src/app/certificados/componentes/form/form.component.html
+++ b/src/app/certificados/componentes/form/form.component.html
@@ -72,8 +72,7 @@
             </div>
             <div>
               <p class="codigo">
-                Para verificar la autenticidad del certificado utilice el código: <span>{{
-                  detalleCursosInstructores.curso.id_cur }}{{ row.ced_par }}</span>
+                Para verificar la autenticidad del certificado utilice el código: <span>{{row.cod_gen_cer}}</span>
               </p>
             </div>
           </div>
